[package]
name = "mm-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mm-bot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alloy = { version = "1", features = ["signers", "sol-types", "signer-local"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
dashmap = "6"
parking_lot = "0.12"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
async-trait = "0.1"
dotenvy = "0.15"
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
